# Discovr-GroupNumber

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  DevREADME.md  Discovr-GroupNumber.cpp  LinuxToolchain.cmake  README.md  WindowsToolchain.cmake  generate_dll_list.cmake
scripts/Linux/: bannergrab.h
scripts/Windows/: bannergrab.h
src/: Discovr-GroupNumber.cpp  Discovr-GroupNumber.h
src/extractors/: DllExtractor.cpp  DllExtractor.h  Extractor.cpp  Extractor.h  NmapExtractor.cpp  NmapExtractor.h
